--- a/src/RayWorkflow.Domain.Shared/RayWorkflow.Domain.Shared.csproj
+++ b/src/RayWorkflow.Domain.Shared/RayWorkflow.Domain.Shared.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="Volo.Abp.Ddd.Domain" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Workflow\" />
+  </ItemGroup>
 </Project>
