--- a/RayWorkflow.Grains/RayWorkflow.Grains.csproj
+++ b/RayWorkflow.Grains/RayWorkflow.Grains.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ray\Ray.Core\Ray.Core.csproj" />
+    <ProjectReference Include="..\ray\Ray.EventBus.RabbitMQ\Ray.EventBus.RabbitMQ.csproj" />
     <ProjectReference Include="..\ray\Ray.Storage.PostgreSQL\Ray.Storage.PostgreSQL.csproj" />
     <ProjectReference Include="..\src\RayWorkflow.Domain\RayWorkflow.Domain.csproj" />
     <ProjectReference Include="..\src\RayWorkflow.IGrains\RayWorkflow.IGrains.csproj" />
