--- a/src/RayWorkflow.EntityFrameworkCore/RayWorkflow.EntityFrameworkCore.csproj
+++ b/src/RayWorkflow.EntityFrameworkCore/RayWorkflow.EntityFrameworkCore.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.1" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="2.0.1" />
   </ItemGroup>
 
